<resources>
    <string name="app_name">Curio</string>
    <string name="select_anguage">Select Your Language</string>
    <string name="curious_icon">fa-hand-o-right </string>
    <string name="title_activity_chpters">ChptersActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="measurments">මිනුම්</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="facebook_app_id">2070080206645380</string>
    <string name="curio_about_description">ලෝකෙට එච්චරම අලුත් නොවුනත් ලංකාවට අලුත් සංකල්පයක් වෙච්ච mobile learning, ඉගෙනීම කියන දේට අලුත්ම අත්දැකීමක් එකතු කරන්නේ ඕනම තැනක ඉදන් ඕනම වෙලාවක දෙයක් ඉගෙන ගන්න පුළුවන් නිසායි.හිතලා බලන්න, උදේ නැගිට්ට වෙලාවේ ඉඳන් නිදාගන්න යනකල්ම අපි අතින් නාස්ති වෙලා යන වෙලාව ගැන.Curio උදව් කරනවා ඒ පොඩි පොඩි වෙලාවල් ඵලදායී විදියට ගතකරන්න</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chapters2">ChaptersActivity2</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="drawer_nemu_about_curio">About Curio | කියුරියෝ ගැන</string>
    <string name="drawer_menu_contribute">Contribute | දායක වන්න</string>
    <string name="drawer_menu_send_feedback">Send feedback | ප්‍රතිචාර</string>
    <string name="drawer_menu_spread_the_word">Spread the word</string>
    <string name="drawer_menu_like_us_on_facebook">Like us on facebook</string>
    <string name="drawer_menu_rate_us">Rate us</string>
    <string name="action_title_previous">Previous</string>
    <string name="action_title_next">Next</string>
    <string name="current_subject_name">Physics</string>

</resources>
