<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/drawer_nemu_about_curio" />

        <item
            android:id="@+id/nav_contribute"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/drawer_menu_contribute" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/drawer_menu_send_feedback" />
    </group>

    <item android:title="@string/drawer_menu_spread_the_word">
        <menu>
            <item
                android:id="@+id/nav_fb_like"
                android:icon="@drawable/ic_thumb_up_black_24dp"
                android:title="@string/drawer_menu_like_us_on_facebook" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_stars_black_24dp"
                android:title="@string/drawer_menu_rate_us" />
        </menu>
    </item>

</menu>
